# zorya

./: .gitignore  AGENTS.md  README.md  findings.md  middleware.ts  package-lock.json  package.json  progress.md  task_plan.md
.agents/rules/: session-sync.md
.tokensave/: branch-meta.json  config.json  tokensave.db  tokensave.db-shm  tokensave.db-wal
app/: globals.css  layout.tsx  page.tsx
app/login/: page.tsx
app/signup/: page.tsx
backend/: README.md  audit.py  pyproject.toml  test_neg.py  verify.py
backend/agents/: __init__.py  clinical_cbt_agent.py  parsing_agent.py  prompts.py  state.py
backend/mcp_servers/: __init__.py  celestial_server.py  clinical_server.py
backend/orchestrator/: __init__.py  checkpointer.py  graph.py  nodes.py  state.py
backend/schemas/: agent_schemas.py  celestial_schemas.py
backend/tests/: test_clinical_cbt_agent.py  test_graph_orchestration.py  test_parsing_agent.py
components/: background.tsx  dashboard-sidebar.tsx  theme-toggle.tsx
components/3d/: celestial-temple.tsx  constellation-mesh.tsx  constellations-data.ts  cosmic-environment.tsx  crystal-water.tsx  hero-scene.tsx  star-textures.ts  zodiac-sign.tsx
components/dashboard/: profile-button.tsx
components/providers/: lenis-provider.tsx
components/ui/: Loader.tsx
lib/controllers/: login.controller.ts  signup.controller.ts
lib/db/: prisma.ts
lib/middleware/: withAuth.ts
lib/services/: auth.service.ts  onboarding.service.ts  user.service.ts
lib/types/: user.ts
prisma/: schema.prisma
src/app/: layout.js  page.js
src/components/: header.jsx  (+3 more)
(+16 files in other folders)
