[project]
name = "zorya-backend"
version = "0.1.0"
description = "Zorya backend: FastMCP servers and LangGraph multi-agent pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-2.0-only" }

dependencies = [
    # MCP server framework
    "fastmcp>=2.0",
    # Swiss Ephemeris — Moshier analytical mode (no binary .se1 files needed)
    "pyswisseph>=2.10",
    # Strict I/O data validation for all agent hand-offs
    "pydantic>=2.0",
    # Multi-agent cyclical state machine
    "langgraph>=0.2",
    # LangChain base primitives required by LangGraph
    "langchain-core>=0.2",
    "langchain-openai>=0.1.0",
    # .env file loading
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "black>=24.0",
    "pytest>=8.0",
    "httpx>=0.27",   # For async MCP tool testing
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["mcp_servers", "agents", "orchestrator", "schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
